--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@cds/core": "^6.0.2",
+    "@clr/angular": "^13.4.1",
+    "@clr/icons": "^13.0.2",
+    "@clr/ui": "^13.4.1",
+    "keycloak-angular": "^10.0.1",
+    "keycloak-js": "^18.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
